--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -1,6 +1,12 @@
 spring: 
   application:
     name: item-service
+    rabbitmq:
+    host: 192.168.126.131
+    port: 5672
+    username: admin
+    password: admin
+    
 server: 
   port: 8001
   
@@ -20,3 +26,4 @@ spring:
 
 server:
   port: 8002
+  
