--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -1,19 +1,15 @@
-spring: 
+spring:
   application:
     name: item-service
-    rabbitmq:
-    host: 192.168.126.131
-    port: 5672
-    username: admin
-    password: admin
     
-server: 
-  port: 8001
+#server:
+#  port: 8001
   
 eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+
 ---
 spring:
   profiles: item1
@@ -26,4 +22,3 @@ spring:
 
 server:
   port: 8002
-  
