--- a/sp-config/zuul-dev.yml
+++ b/sp-config/zuul-dev.yml
@@ -1,11 +1,6 @@
 spring:
   application:
     name: zuul
-    rabbitmq:
-    host: 192.168.126.131
-    port: 5672
-    username: admin
-    password: admin
     
 server:
   port: 3001
@@ -17,13 +12,19 @@ eureka:
 
 zuul:
   retryable: true
+
+#  routes:
+#    item-service: /item-service/**
+#    user-service: /user-service/**
+#    order-service: /order-service/**
     
-ribbon:
-  ConnectTimeout: 1000
-  ReadTimeout: 2000
-  MaxAutoRetriesNextServer: 1
-  MaxAutoRetries: 1
-  
+#ribbon:
+#  ConnectTimeout: 1000
+#  ReadTimeout: 1000
+#  MaxAutoRetriesNextServer: 1
+#  MaxAutoRetries: 1
+
+
 hystrix:
   command:
     default:
